<resources>
    <string name="app_name">lab3_1</string>
    <string name="error_word">Blad!</string>
    <string name="enter_a_word">Enter a word</string>
    <string name="save">Save</string>
    <string name="list_preference_title">List Preference Title\n</string>
    <string name="text_preference_title">Text Preference Title\n</string>
    <string name="category_1_header">Category One Header\n</string>
    <string name="category_2_header">Category 2 Header</string>
    <string name="switch_1_title">Switch 1 Title\n</string>
    <string name="switch_2_summary_off">Switch summary off\n</string>
    <string name="switch_2_summary_on">Switch summary on</string>
    <string name="switch_2_title">Switch 2 title\n</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="change_settings">Change Settings</string>
</resources>