<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_1_header">
        <EditTextPreference
            app:defaultValue="default from XML"
            app:key="text_preference"
            app:title="@string/text_preference_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/list_entries"
            app:entryValues="@array/list_values"
            app:key="list_preference"
            app:title="@string/list_preference_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_2_header">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="switch_1_preference"
            app:title="@string/switch_1_title" />

        <SwitchPreferenceCompat
            app:dependency="switch_1_preference"
            app:key="switch_2_preference"
            app:summaryOff="@string/switch_2_summary_off"
            app:summaryOn="@string/switch_2_summary_on"
            app:title="@string/switch_2_title" />
    </PreferenceCategory>

</PreferenceScreen>
